--- a/020915/index.html
+++ b/020915/index.html
@@ -11,7 +11,7 @@ svg { border: solid black 1px; }
 </head>
 <body>
 
-<h3>Prompt for Monday, Feb 9. Practice with scales and data binding. Estimating &pi;.</h3>
+<h3>Prompt for Monday, Feb 9. Practice with scales and data binding. Estimating &pi;.</h3> yes
 
 <!-- We'll put our estimate of pi here -->
 <div id="pi"></div>
